# z-outbreak

./: CMakeLists.txt  README.md  run.sh  setup.sh
app/: main.cpp
engine/include/core/: gl_system.h  time.h
engine/include/graphics/: renderer.h  shader.h
engine/include/input/: input.h
engine/include/math/: transform.h
engine/src/core/: gl_system.cpp  time.cpp
engine/src/graphics/: renderer.cpp  shader.cpp
engine/src/input/: input.cpp
game/include/: game.h
game/include/player/: player.h
game/include/world/: room.h
game/src/: game.cpp
game/src/player/: player.cpp
res/shaders/: triangle.frag
